fixed weird stretching issue

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -7,6 +7,8 @@
  * places to add some flare.
  */
 
+
+
 .notion {
   --notion-max-width: 720px;
   --notion-header-height: 54px;
@@ -194,7 +196,14 @@
 .notion-page-cover-wrapper span,
 .notion-page-cover-wrapper img {
   max-width: 1200px !important;
+  max-height: 200%;
   border-radius: 24px;
+}
+
+.notion-collection-card-cover img {
+  min-height: 100% !important;
+  height: auto;
+  max-height: 10000% !important;
 }
 
 .notion-page-cover-wrapper {
